<?xml version="1.0" encoding="UTF-8" ?>
<!--

    Copyright (c) 2018-2025 (5918-5925 in Lukashian years)
    All rights reserved.

    The Lukashian Calendar and The Lukashian Calendar Mechanism are registered
    at the Benelux Office for Intellectual Property, registration number 120712.

    Redistribution and use in source and binary forms, with or without
    modification, are permitted provided that the following conditions are met:

    1. Redistributions of source code must retain the above copyright
       notice, the above registration notice, this list of conditions
       and the following disclaimer.
    2. Redistributions in binary form must reproduce the above copyright
       notice, the above registration notice, this list of conditions
       and the following disclaimer in the documentation and/or other materials
       provided with the distribution.
    3. All materials mentioning features or use of this software,
       the Lukashian Calendar or the underlying Lukashian Calendar Mechanism,
       with or without modification, must refer to the Calendar as "The
       Lukashian Calendar" and to the Calendar Mechanism as "The Lukashian
       Calendar Mechanism".
    4. Renaming of source code, binary form, the Lukashian Calendar or the
       Lukashian Calendar Mechanism, with or without modification, is explicitly
       disallowed. Any copies, extracts, code excerpts, forks, redistributions
       or translations into other languages of source code, binary form,
       the functional behaviour of the Lukashian Calendar as defined by source code or
       the functional behaviour of the Lukashian Calendar Mechanism as defined by source
       code, with or without modification, must refer to the Calendar
       as "The Lukashian Calendar" and to the Calendar Mechanism as "The
       Lukashian Calendar Mechanism".
    5. Any copies, extracts, code excerpts, forks, redistributions
       or translations into other languages of source code, binary form,
       the functional behaviour of the Lukashian Calendar as defined by source code or
       the functional behaviour of the Lukashian Calendar Mechanism as defined by source
       code, with or without modification, may not include modifications that
       change the functional behaviour of the Lukashian Calendar Mechanism as
       implemented by source code.

    THIS SOFTWARE IS PROVIDED BY COPYRIGHT HOLDER ''AS IS'' AND ANY
    EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
    DISCLAIMED. IN NO EVENT SHALL COPYRIGHT HOLDER BE LIABLE FOR ANY
    DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
    (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
    LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
    ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<!-- Version of the pom model. It should remain on 4.0.0 -->
	<modelVersion>4.0.0</modelVersion>


	<!-- Main system data -->
	<groupId>org.lukashian</groupId>
	<artifactId>lukashian</artifactId>
	<version>1.11.0</version>
	<packaging>jar</packaging>


	<!-- System properties -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<java.version>21</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
	</properties>


	<!-- Project documentation -->
	<name>Lukashian Calendar</name>
	<url>https://www.lukashian.org</url>
	<scm>
		<url>https://github.com/The-Lukashian-Calendar/lukashian</url>
		<connection>scm:git:https://github.com/The-Lukashian-Calendar/lukashian</connection>
		<developerConnection>scm:git:https://github.com/The-Lukashian-Calendar/lukashian</developerConnection>
	</scm>
	<organization>
		<name>Lukashian.org</name>
		<url>https://www.lukashian.org</url>
	</organization>
	<developers>
		<developer>
			<name>Gert-Jan Schouten</name>
			<url>https://www.zenbi.co.uk</url>
			<roles>
				<role>Creator</role>
			</roles>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>The Lukashian Calendar License</name>
			<url>https://github.com/The-Lukashian-Calendar/lukashian/blob/main/license-header.txt</url>
		</license>
	</licenses>
	<description>
		The Lukashian Calendar is a calendar that is exceptionally simple, highly accurate and radically different.
	</description>


	<!-- Build information -->
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.11.2</version>
					<configuration>
						<additionalJOptions>
							<additionalJOption>-html5</additionalJOption>
							<additionalJOption>-Xdoclint:none</additionalJOption>
						</additionalJOptions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>4.6</version>
					<configuration>
						<licenseSets>
							<licenseSet>
								<header>license-header.txt</header>
							</licenseSet>
						</licenseSets>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.12</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar-no-fork</goal>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<!-- Dependencies -->
	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-numbers-fraction</artifactId>
			<version>1.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.11.4</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>


	<!-- Build profiles -->
	<profiles>
		<profile>
			<id>jacoco</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<phase>verify</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>sign</id>
			<!-- For more information about how this works, see:
				-https://maven.apache.org/guides/mini/guide-central-repository-upload.html
				-https://central.sonatype.org/publish/requirements/gpg/
				-https://oss.sonatype.org/index.html
				-https://issues.sonatype.org/browse/OSSRH-58862
				-https://keys.openpgp.org/search?q=903EE6E045CB6B0A7025C145A2EFF7B8BFA5CCE2
			 -->
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<configuration>
							<keyname>The Lukashian Calendar</keyname>
						</configuration>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<descriptors>
								<descriptor>src/main/assembly/sonatype.xml</descriptor>
							</descriptors>
						</configuration>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
